[gd_scene load_steps=2 format=3 uid="uid://cwmqdvpygwf8x"]

[ext_resource type="Script" uid="uid://pwej31m4i66s" path="res://levels/title.gd" id="1_gkh1h"]

[node name="Level00" type="Node2D"]
script = ExtResource("1_gkh1h")

[node name="Label" type="Label" parent="."]
offset_left = 249.0
offset_top = 47.0
offset_right = 400.0
offset_bottom = 70.0
text = "Super Word Smash!"

[node name="ShortGameButton" type="Button" parent="."]
offset_left = 208.0
offset_top = 173.0
offset_right = 262.0
offset_bottom = 227.0
text = "Short
Game"

[node name="MediumGameButton" type="Button" parent="."]
offset_left = 292.0
offset_top = 173.0
offset_right = 364.0
offset_bottom = 227.0
text = "Medium
Game"

[node name="LongGameButton" type="Button" parent="."]
offset_left = 403.0
offset_top = 173.0
offset_right = 457.0
offset_bottom = 227.0
text = "Long
Game"

[connection signal="pressed" from="ShortGameButton" to="." method="_on_short_game_button_pressed"]
[connection signal="pressed" from="MediumGameButton" to="." method="_on_medium_game_button_pressed"]
[connection signal="pressed" from="LongGameButton" to="." method="_on_long_game_button_pressed"]
